--- a/run/requirements.txt
+++ b/run/requirements.txt
@@ -1,9 +1,13 @@
-streamlit
 langchain
 langchain_community
 langchain_openai
-langchain_core
-langchain-chroma
 pysqlite3-binary
 pypdf
 langchain-text-splitters
+
+protobuf==3.20.0
+chromadb==0.4.24
+langchain-chroma==0.1.6
+langchain-core==0.2.0
+openai>=1.0.0
+streamlit>=1.0.0
