--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ langchain
 langchain_community
 langchain_openai
 langchain_core
-langchain-chroma
 pysqlite3-binary
 pypdf
 langchain-text-splitters
@@ -18,3 +17,11 @@ unstructured[pdf]
 python-pptx
 faiss-cpu
 grandalf
+
+protobuf==3.20.0
+chromadb==0.4.24
+langchain-chroma==0.1.6
+
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-api==1.25.0
